# umarket_web

./: README.md  pyproject.toml
migrations/: 001_alter_usuarios_auth.sql  002 fix sequences.sql  003 add imagem produtos.sql  dump_adaptative.sql
scripts/: seed_senhas.py
src/umarket/: app.py  config.py  extensions.py
src/umarket/models/: __init__.py  estoque.py  pdv.py  produto.py  usuario.py  venda.py  venda_produto.py
src/umarket/routes/: admin.py  auth.py  cliente.py
src/umarket/services/: carrinho_service.py  venda_service.py
src/umarket/static/css/: style.css
src/umarket/templates/: base.html
src/umarket/templates/admin/: categorias.html  dashboard.html  estoque.html  login.html  pedidos.html  produtos.html  usuarios.html
src/umarket/templates/cliente/: cadastro.html  carrinho.html  catalogo.html  checkout.html  historico.html  index.html  login.html  perfil.html  produto.html
tests/: test_routes.py
