[project]
name = "umarket"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan Carlos",email = "n.data.engineer.project@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gunicorn (>=26.0.0,<27.0.0)"
]

[tool.poetry]
packages = [{include = "umarket", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
