[project]
name = "umarket"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan Carlos",email = "n.data.engineer.project@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gunicorn (>=26.0.0,<27.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "werkzeug (>=3.1.8,<4.0.0)"
]

[tool.poetry]
packages = [{include = "umarket", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
